# vectorjobs

./: .gitignore  .graphifyignore  README.md  pyproject.toml  scratch_make_real_5k.py
configs/: colab_t4.yaml  local_6gb.yaml
data/: README.md
docs/: populares_ingest.md
graphify-out/: .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
notebooks/: cluster_skill_timelines_colab.ipynb
reports/: baseline_regex_v0_1.json  baseline_regex_v0_1.md  build_silver.txt  build_tfidf.txt  m0_audit_report.md  m1_5_real_5k_profile.json  m1_5_real_dataset_contract_report.md  m1_5_real_full_profile.json  m1_data_profile.json  m1_real_data_smoke_report.md  m2_2_meeting_summary.md  m2_2_temporal_demo_100k.md  m2_2_temporal_demo_10k.md  presentation_visual_audit.md  recommend.txt
scripts/: README_dataset.md  aws_cost_projection.py  build_gold_contract.py  build_presentation_assets.py  download_dataset.py  market_value.py
tests/: test_audit_extraction_baseline.py  test_build_embeddings_cli.py  test_build_gold_contract.py  test_cluster_movement.py  test_data_contract.py  test_dense_retrieval.py  test_extract_candidates.py  test_extract_html.py  test_extract_sections.py  test_extract_skills.py  test_extraction_labeling.py  test_job_card.py  test_job_equivalence_fixtures.py  test_m1_5_metadata_preservation.py  test_m1_profile_and_smoke.py  test_mock_embedding_backend.py  test_optional_sentence_transformer_backend.py  test_parquet_adapter.py  test_populares_contracts.py  test_populares_ingest.py  test_qwen3_backend_contract.py  test_retrieval_metrics.py  (+5 more)
(+98 files in other folders)
